--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="app pure-g">
       <header class="pure-u-1">
         <div class="pure-u-1-3">
-          <h1 class="logo">Finder challenge!</h1>
+          <h1 class="logo"><img src="/img/logo.jpg"></h1>
         </div>
         <div class="pure-u-7-24">
           <div class="search-form">
