Estilos y primeras funciones

--- a/public/index.html
+++ b/public/index.html
@@ -15,19 +15,26 @@
         <div class="pure-u-1-3">
           <h1 class="logo"><img src="/img/logo.jpg"></h1>
         </div>
-        <div class="pure-u-7-24">
+        <div class="pure-u-1-2">
           <div class="search-form">
             <input class="awesomplete" id="fch-input">
             <button id="fch-button" disabled>Buscar</button>
           </div>
         </div>
-        <div class="pure-u-1-3"></div>
+        <div class="pure-u-1-12"><a class="linksearch" href="#">Guardar Búsqueda</a></div>
       </header>
-      <aside class="filters pure-u-1-4"></aside>
+      <aside class="filters pure-u-1-4">
+        <h1 class="asideTitles">Búsquedas Guardadas</h1><a href="#" lb-genero="horror">Terror Puro</a><a href="#" lb-genero="comedy">Comedias en inglés</a>
+        <h1 class="asideTitles">Categorías</h1><a href="#">Todos</a><a href="#" lb-genero="horror">Terror</a><a href="#" lb-genero="comedy">Comedias</a><a href="#" lb-genero="drama">Drama</a>
+        <h1 class="asideTitles">Idioma</h1><a href="#">Todos</a><a href="#">Inglés</a><a href="#">Español</a><a href="#">Portugués</a>
+        <h1 class="asideTitles">Publicación</h1><a href="#">Todos</a><a href="#">Hoy</a><a href="#">Hace una semana</a><a href="#">Hace un mes</a><a href="#">Hace un año</a>
+        <h1 class="asideTitles">Presentación</h1><a href="#">Impreso</a><a href="#">Digital</a><a href="#">Impreso y digital</a>
+      </aside>
       <content class="pure-u-3-4"></content>
       <footer class="pure-u-1"></footer>
     </div>
     <script src="/vendor/underscore/underscore-min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/scripts/global.js"></script>
     <script src="/scripts/search-form.js"></script>
     <script src="/scripts/app.js"></script>
